--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>El Pollo Loco</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/game.js"></script>
+    <script src="js/prelaod.js"></script>
 
 
 </head>
 
-<body onload="init()">
+<body onload="init(), loadGame()">
 
     <h1>El Pollo Loco</h1>
 
     <div class="canvas-container">
 
-        <canvas id="canvas" width="820" height="450"> </canvas>
-
+        <canvas id="canvas" width="820" height="425"> </canvas>
 
     </div>
 </body>
