--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Pollo Loco</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/variables.js"></script>
     <script src="js/game.js"></script>
     <script src="js/prelaod.js"></script>
+
 
 
 </head>
