--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>El Pollo Loco</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/variables.js"></script>
-    <script src="js/game.js"></script>
     <script src="js/prelaod.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/draw.js"></script>
+    <script src="js/animation.js"></script>
+
 
 
 
