--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/game.js"></script>
     <script src="js/draw.js"></script>
     <script src="js/animation.js"></script>
+    <script src="js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/touch_processing.js"></script>
 
 
