--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>El Pollo Loco</h1>
 
         </div>
-        <img src="/mobile_instructions.png" class="mobile-instructions" id="mobile-instructions">
+        <img src="img/mobile_instructions.png" class="mobile-instructions" id="mobile-instructions">
 
 
         <div class="canvas-container">
