refactor and optimzing

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body onload="init(); turnSoundandMusicOff()">
+<body onload="init(); turnSoundAndMusicOff()">
 
     <div id='wrapper' class="wrapper">
         <div class="heading-box">
